--- a/style.css
+++ b/style.css
@@ -546,13 +546,13 @@ input[type="time"] {
 
 .alarm__btn {
   position: relative;
-  padding: 8px 12px;
-  font-size: 1rem;
+  padding: .35rem .5rem;
+  font-size: .9rem;
   font-weight: bold;
   color: var(--primary-color);
   background-color: transparent;
   border: none;
-  border-radius: 12px;
+  border-radius: .5rem;
   cursor: pointer;
   z-index: 1;
   overflow: hidden;
