--- a/style.css
+++ b/style.css
@@ -818,7 +818,9 @@ input[type="number"] {
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5),
     0px -3px 5px rgba(0, 0, 0, 0.5);
 }
-
+.kbs__fpart2 {
+  position: relative;
+}
 .kbs__input {
   width: 100%;
   padding: 5px;
@@ -839,6 +841,15 @@ input[type="number"] {
 .kbs__input:focus {
   box-shadow: 0 0 10px var(--highlight-color);
   border: 1px solid var(--highlight-color);
+}
+.kbs__span {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  font-size: 12px;
+  color: var(--text-notes);
+  pointer-events: none;
 }
 
 .kbs__list {
