--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* NUEVO CSS */
 :root {
-  --primary-color: #E6E6FA;
+  --primary-color: #e6e6fa;
   /* Lavender*/
   --secondary-color: #152b4a;
   /* Blue Marine*/
-  --text-color: #DCDCDC;
+  --text-color: #dcdcdc;
   /*gris blanco*/
   --disabled-color: #cccccc;
   /* Light Gray */
@@ -36,7 +36,7 @@ body {
   background-color: var(--primary-color);
   background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23f28297' fill-opacity='0.4'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23f28297' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-  font-family: "Saira", Arial, sans-serif;
+  font-family: 'Saira', Arial, sans-serif;
   transition: background-color 0.5s ease;
 }
 
@@ -44,20 +44,20 @@ body {
 body.dark-theme {
   --primary-color: #121212;
   /* Elegant Black */
-  --secondary-color: #1E1E1E;
+  --secondary-color: #1e1e1e;
   /* Dark Panel Background */
-  --text-color: #E0E0E0;
+  --text-color: #e0e0e0;
   /* Soft White */
   --disabled-color: #424242;
   /* Darker Gray */
-  --success-color: #2E7D32;
+  --success-color: #2e7d32;
   /* Deep Green */
-  --info-color: #BDBDBD;
+  --info-color: #bdbdbd;
   /* Lighter Gray for text */
   --info-color: #c9b800;
   /* Lighter Gray for text */
 
-  --highlight-color: #C62828;
+  --highlight-color: #c62828;
   /* Elegant Deep Red */
   --marcaagua: rgba(255, 255, 255, 0.1);
   --opacidadgeneral: rgba(255, 255, 255, 0.05);
@@ -74,12 +74,12 @@ body.dark-theme .alarm__btn {
 }
 
 body.dark-theme .actions__btn:hover {
-  background-color: #9A0000;
+  background-color: #9a0000;
 }
 
 body.dark-theme .alarm__btn:hover {
   background-color: var(--highlight-color);
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 body.dark-theme .kbs {
@@ -121,7 +121,9 @@ button:nth-of-type(7) {
   align-items: center;
   margin-bottom: 20px;
   padding: 0 1em;
-  transition: background-color 0.5s ease, color 0.5s ease;
+  transition:
+    background-color 0.5s ease,
+    color 0.5s ease;
 }
 
 .header__logo {
@@ -158,7 +160,9 @@ button:nth-of-type(7) {
   pointer-events: none;
   /* Evita interacciones cuando está cerrado */
   overflow: hidden;
-  transition: max-height 0.6s ease-in-out, padding 0.5s ease-in-out;
+  transition:
+    max-height 0.6s ease-in-out,
+    padding 0.5s ease-in-out;
 
   /* transition: all .5s ease; */
 }
@@ -199,7 +203,6 @@ button:nth-of-type(7) {
   }
 }
 
-
 .container {
   display: flex;
   flex-direction: column;
@@ -215,7 +218,9 @@ button:nth-of-type(7) {
   border-radius: 40px;
   background-color: var(--secondary-color);
   position: relative;
-  transition: background-color 0.5s ease, color 0.5s ease;
+  transition:
+    background-color 0.5s ease,
+    color 0.5s ease;
 }
 
 .clock::after {
@@ -224,7 +229,7 @@ button:nth-of-type(7) {
   top: 1px;
   left: 35px;
   font-size: 14px;
-  color: var(--marcaagua)
+  color: var(--marcaagua);
 }
 
 .clock__item {
@@ -279,25 +284,24 @@ button:nth-of-type(7) {
   width: 100%;
   background-color: var(--secondary-color);
   color: var(--text-color);
-  padding: .7rem 0 .8rem 0;
+  padding: 0.7rem 0 0.8rem 0;
 }
 
 .temporizador__intro {
   display: flex;
   align-items: baseline;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
   max-width: 800px;
-  margin-left: .8rem;
-  margin-bottom: .5rem;
+  margin-left: 0.8rem;
+  margin-bottom: 0.5rem;
   border-bottom: 2px solid var(--text-color);
   width: fit-content;
 }
 @media (min-width: 600px) {
   .temporizador__intro {
-    margin: 0 auto .5rem auto;
+    margin: 0 auto 0.5rem auto;
     width: auto;
   }
-  
 }
 
 .temporizador__titulo {
@@ -307,7 +311,7 @@ button:nth-of-type(7) {
 }
 
 .temporizador__detalle {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 .contenedor-util {
@@ -325,14 +329,14 @@ button:nth-of-type(7) {
   padding: 0;
   display: flex;
   flex-direction: column;
-  row-gap: .6rem;
+  row-gap: 0.6rem;
   list-style: none;
 }
 
 .temporizador__opcion {
-  padding: 0.2rem .6rem;
-  border-radius: .5rem;
-  font-size: .8rem;
+  padding: 0.2rem 0.6rem;
+  border-radius: 0.5rem;
+  font-size: 0.8rem;
   text-align: center;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -377,7 +381,6 @@ button:nth-of-type(7) {
   stroke-width: 2;
 }
 
-
 .temporizador__tiempo svg circle:nth-child(2) {
   stroke: var(--success-color);
   stroke-dasharray: 376.99;
@@ -401,7 +404,8 @@ button:nth-of-type(7) {
   background-color: var(--success-color);
   transform: translate(-50%);
   border-radius: 50%;
-  box-shadow: 0 0 10px var(--success-color),
+  box-shadow:
+    0 0 10px var(--success-color),
     0 0 30px var(--success-color);
 }
 
@@ -415,7 +419,7 @@ button:nth-of-type(7) {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  row-gap: .5rem;
+  row-gap: 0.5rem;
 }
 
 .temporizador__pantalla {
@@ -428,7 +432,9 @@ button:nth-of-type(7) {
 .numero .temporizador__control {
   cursor: pointer;
   font-size: 2.2rem;
-  transition: transform 0.1s ease, color 0.3s ease;
+  transition:
+    transform 0.1s ease,
+    color 0.3s ease;
   z-index: 10;
 }
 
@@ -441,12 +447,9 @@ button:nth-of-type(7) {
   color: var(--highlight-color);
 }
 
-
-
 #play {
   color: var(--success-color);
 }
-
 
 /* --- ESTILOS MODAL Y ALARMA --- */
 .modal {
@@ -522,7 +525,7 @@ label {
   color: #555;
 }
 
-input[type="time"] {
+input[type='time'] {
   width: 100%;
   padding: 0.75em;
   border: 1px solid #ddd;
@@ -546,19 +549,25 @@ input[type="time"] {
 
 .alarm__btn {
   position: relative;
-  padding: .35rem .5rem;
-  font-size: .9rem;
+  padding: 0.35rem 0.5rem;
+  font-size: 0.9rem;
   font-weight: bold;
   color: var(--primary-color);
   background-color: transparent;
   border: none;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   cursor: pointer;
   z-index: 1;
   overflow: hidden;
 
   /* Background animado de degradado */
-  background: linear-gradient(135deg, #3b004a, var(--highlight-color), #3b004a, var(--highlight-color));
+  background: linear-gradient(
+    135deg,
+    #3b004a,
+    var(--highlight-color),
+    #3b004a,
+    var(--highlight-color)
+  );
   background-size: 400% 400%;
   animation: liquid-flow 15s ease infinite;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
@@ -587,7 +596,13 @@ input[type="time"] {
   transform: scale(1.05);
   color: white;
   box-shadow: 0 0 15px var(--highlight-color);
-  background: linear-gradient(135deg, #3b004a, var(--highlight-color), #3b004a, var(--highlight-color));
+  background: linear-gradient(
+    135deg,
+    #3b004a,
+    var(--highlight-color),
+    #3b004a,
+    var(--highlight-color)
+  );
   background-size: 400% 400%;
   animation: liquid-flow 5s ease infinite;
 }
@@ -641,7 +656,7 @@ input[type="time"] {
 }
 
 .alert button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -684,7 +699,10 @@ input[type="time"] {
   border-radius: 50%;
   cursor: pointer;
   box-shadow: 0 2px 8px rgba(21, 43, 74, 0.08);
-  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    color 0.3s,
+    box-shadow 0.3s;
 }
 
 #themeSwitcher:hover {
@@ -719,7 +737,6 @@ input[type="time"] {
     grid-template-columns: 1fr 1fr;
     column-gap: 10px;
   }
-
 }
 
 .bloc {
@@ -727,8 +744,8 @@ input[type="time"] {
   background-color: var(--secondary-color);
   border-radius: 10px;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.6);
-  padding: .5rem .5rem 1rem .5rem;
-  margin-bottom: .5rem;
+  padding: 0.5rem 0.5rem 1rem 0.5rem;
+  margin-bottom: 0.5rem;
   display: flex;
   flex-direction: column;
 }
@@ -738,7 +755,7 @@ input[type="time"] {
   font-weight: bold;
   text-align: center;
   color: var(--text-color);
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .bloc__text {
@@ -749,11 +766,10 @@ input[type="time"] {
   border: none;
   outline: none;
   resize: none;
-  padding: .5rem;
+  padding: 0.5rem;
   border-radius: 10px;
   font-size: 0.95rem;
-  font-family: "Saira", Arial, sans-serif;
-  ;
+  font-family: 'Saira', Arial, sans-serif;
   line-height: 1.6;
   transition: all 0.3s ease;
 }
@@ -762,7 +778,7 @@ input[type="time"] {
 .kbs {
   background-color: var(--primary-color);
   color: var(--secondary-color);
-  padding: .5rem;
+  padding: 0.5rem;
   border-radius: 10px;
   width: 100%;
   max-width: 600px;
@@ -774,7 +790,7 @@ input[type="time"] {
   font-size: 1rem;
   font-weight: bold;
   color: var(--secondary-color);
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .kbs__form {
@@ -801,21 +817,24 @@ input[type="time"] {
   font-size: 14px;
   font-weight: bold;
   cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease;
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-input[type="number"] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
 
 .kbs__btnAdd:hover {
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5),
+  box-shadow:
+    0px 3px 5px rgba(0, 0, 0, 0.5),
     0px -3px 5px rgba(0, 0, 0, 0.5);
 }
 .kbs__fpart2 {
@@ -901,7 +920,9 @@ input[type="number"] {
 .kb-action-btn {
   cursor: pointer;
   font-size: 18px;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease;
 }
 
 .copy-btn:hover {
